<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main"
    android:orientation="vertical"
    android:layout_margin="5sp">

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20sp"/>



    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="130sp">

        <Button
            android:id="@+id/Ancient_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ancient"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:padding="23sp"
            android:layout_marginRight="30sp"/>

        <Button
            android:id="@+id/Medieval_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medieval"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:padding="23sp"
            android:layout_marginRight="10sp"/>


    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="45sp">

        <Button
            android:id="@+id/CA_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ca"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:paddingLeft="62sp"
            android:paddingRight="65sp"
            android:paddingTop="23sp"
            android:paddingBottom="22sp"
            android:layout_marginEnd="30sp"/>

        <Button
            android:id="@+id/Polity_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/polity"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:paddingLeft="38sp"
            android:paddingRight="35sp"
            android:paddingTop="23sp"
            android:paddingBottom="22sp"
            android:layout_marginRight="10sp"/>


    </LinearLayout>
    <fragment
        android:id="@+id/nav_host_fragment_content_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="239dp"
        app:defaultNavHost="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />





</LinearLayout>